#47 Added category, and test for all services. And added some validat… (#50)
#48 Added category, and test for all services. And added some validation.
#48 Adding allergy as well, tester's, fixing bugs. and testing everything manually with postman.